2004-07-08  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gui/Makefile.am:
	tarball should ship .schemas.in.in files, not generated files.

2004-07-06  Rodrigo Moya <rodrigo@novell.com>

	* gui/gnome-cal.c (gnome_calendar_init): setup the widgets before
	the configuration.

2004-07-06  JP Rosevear  <jpr@novell.com>

	Fixes #60645
	
	* gui/e-calendar-view.c (e_calendar_view_new_appointment_full):
	guess when an item should be all day based on the selection time

2004-07-05  Rodrigo Moya <rodrigo@novell.com>

	* gui/gnome-cal.c (setup_widgets): don't set the timezone on the views
	here.
	(set_timezone): do it here.
	(client_cal_opened_cb): call set_timezone() here.

2004-07-02  Rodrigo Moya <rodrigo@novell.com>

	* gui/gnome-cal.c (set_view): update the internal current_view_type
	field and focus the newly selected view.

2004-07-02  Rodney Dawes  <dobey@novell.com>

	* gui/dialogs/url-editor-dialog.c (get_widgets):
	Get the label for the calendar list header also
	(init_widgets): Set the border widths for the dialog's vbox and
	action area to be more compliant with the HIG
	Set the mnemonic widget for the calendar label, to the Source Selector
	Remove the unneeded settings for the scrolled window, these are in the
	glade xml for the widget
	Set the icon list on the correct dialog widget, not the settings dialog

	* gui/dialogs/url-editor-dialog.h:
	Add the calendar_list_label widget here so we can access it

	* gui/dialogs/url-editor-dialog.glade:
	Change the dialog's layout to be HIG compliant and fix some strings
	to do the same
	Add mnemonics to all the labels that are associated with widgets

2004-06-29  Sivaiah Nallagatla <snallagatla@novell.com>

        * gui/e-tasks.c (e_tasks_add_todo_source)
         (e_tasks_remove_todo_source) : store and lookup  clients
        based on ESource uid instead of uri in priv->clients

2004-06-28  Not Zed  <NotZed@Ximian.com>

	* gui/tasks-component.c (impl__get_userCreatableItems): same.
