@@ -1,3 +1,15 @@
+2004-07-09  Rodrigo Moya <rodrigo@novell.com>
+
+	Fixes #60289
+
+	* gui/dialogs/select-source-dialog.c (select_source_dialog): set the
+	absolute URI on the selected source, so that the ESource we keep
+	around has a valid URI.
+
+	* gui/e-calendar-view.c (transfer_item_to): when copying appointments,
+	change the UID.
+	(transfer_selected_items): don't pass hardcoded values to transfer_item_to.
+
 2004-07-08  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* gui/Makefile.am:
